refactor: refactor project-structure

--- a/src/index.pcss
+++ b/src/index.pcss
@@ -5,6 +5,19 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: PingFangSC-Regular,poppin,Tahoma,Arial,sans-serif;
+  background: var(--mainBgColor);
+}
+
+:root {
+  --mainColor: white;
+  --mainBgColor: #f0f1f2;
+  --mainFontColor: #24292e;
+  --borderColor: #ccc;
+  --headerMaxWidth: 1200px;
+  --headerMinWidth: 1000px;
+  --mainMaxWidth: 980px;
+  --mainMinWidth: 700px;
 }
 
 code {
