--- a/src/page/Recommend/style.pcss
+++ b/src/page/Recommend/style.pcss
@@ -2,3 +2,20 @@
   width: 100%;
   height: 300px;
 }
+.recommend {
+  .tags-list {
+    padding: 12px 0;
+    display: flex;
+    justify-content: space-around;
+    cursor: pointer;
+    border-bottom: 1px solid var(--borderColor);
+    .tag {
+      &:hover {
+        color: var(--mainColor);
+      }
+      &.active {
+        color:var(--mainColor);
+      }
+    }
+  }
+}
