--- a/src/style.pcss
+++ b/src/style.pcss
@@ -6,18 +6,19 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: PingFangSC-Regular,poppin,Tahoma,Arial,sans-serif;
-  background: var(--mainBgColor);
 }
 
 :root {
-  --mainColor: white;
-  --mainBgColor: #f0f1f2;
+  --mainFgColor: white;
+  --mainBgColor: #fafbfc;
+  --mainColor: #00BFFF;
   --mainFontColor: #24292e;
-  --borderColor: #ccc;
-  --headerMaxWidth: 1200px;
-  --headerMinWidth: 1000px;
   --mainMaxWidth: 980px;
   --mainMinWidth: 700px;
+  --headerMaxWidth: 1200px;
+  --headerMinWidth: 850px;
+  --borderColor: #f0f1f2;
+  --hoverBgColor: #f0f1f2;
 }
 
 code {
@@ -28,4 +29,9 @@ code {
 ul, ol {
   margin: 0;
   padding: 0;
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
 }
