--- a/src/page/Recommend/style.pcss
+++ b/src/page/Recommend/style.pcss
@@ -1,12 +1,10 @@
-.ant-carousel .slick-slide {
-  width: 100%;
-  height: 300px;
-}
 .recommend {
+  height: calc(100% - 40px);
   .tags-list {
-    padding: 12px 0;
+    height: 40px;
     display: flex;
     justify-content: space-around;
+    align-items: center;
     cursor: pointer;
     border-bottom: 1px solid var(--borderColor);
     .tag {
