--- a/src/style.pcss
+++ b/src/style.pcss
@@ -19,6 +19,7 @@ body {
   --headerMinWidth: 850px;
   --borderColor: #f0f1f2;
   --hoverBgColor: #f0f1f2;
+  --fontSmallSize: 12px;
 }
 
 code {
@@ -33,5 +34,6 @@ ul, ol {
 }
 
 a {
+  color: black;
   text-decoration: none;
 }
