--- a/src/style.pcss
+++ b/src/style.pcss
@@ -13,6 +13,7 @@ body {
   --mainBgColor: #fafbfc;
   --mainColor: #00BFFF;
   --mainFontColor: #24292e;
+  --descFontColor: #aaa;
   --mainMaxWidth: 980px;
   --mainMinWidth: 700px;
   --headerMaxWidth: 1200px;
