--- a/src/style.pcss
+++ b/src/style.pcss
@@ -19,6 +19,7 @@ body {
   --headerMaxWidth: 1200px;
   --headerMinWidth: 850px;
   --borderColor: #f0f1f2;
+  --darkBorderColor: #ccc;
   --hoverBgColor: #f0f1f2;
   --fontSmallSize: 12px;
 }
@@ -37,4 +38,8 @@ ul, ol {
 a {
   color: black;
   text-decoration: none;
+}
+
+h1, h2, h3 {
+  margin: 0;
 }
