--- a/src/style.pcss
+++ b/src/style.pcss
@@ -12,6 +12,7 @@ body {
   --mainFgColor: white;
   --mainBgColor: #fafbfc;
   --mainColor: #00BFFF;
+  --grayColor: #666;
   --mainFontColor: #24292e;
   --descFontColor: #aaa;
   --mainMaxWidth: 980px;
@@ -19,7 +20,7 @@ body {
   --headerMaxWidth: 1200px;
   --headerMinWidth: 850px;
   --borderColor: #f0f1f2;
-  --darkBorderColor: #ccc;
+  --darkBorderColor: #e0e1e2;
   --hoverBgColor: #f0f1f2;
   --fontSmallSize: 12px;
 }
@@ -33,6 +34,11 @@ ul, ol {
   margin: 0;
   padding: 0;
   list-style: none;
+}
+
+table {
+  margin: 0;
+  padding: 0;
 }
 
 a {
