feat: add custom scroll-bar

--- a/src/page/playlist-detail/style.pcss
+++ b/src/page/playlist-detail/style.pcss
@@ -1,7 +1,7 @@
 .playlist-detail {
   padding: 45px 45px 0;
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
   box-sizing: border-box;
   .playlist-top {
     position: relative;
@@ -31,7 +31,6 @@
   .table-wrapper {
     display: table;
     width: 100%;
-    padding-top: 20px;
     .table-title {
       display: table-header-group;
       font-size: 13px;
