chore: adjust scroll-bar

--- a/src/page/playlist-detail/style.pcss
+++ b/src/page/playlist-detail/style.pcss
@@ -31,6 +31,7 @@
   .table-wrapper {
     display: table;
     width: 100%;
+    margin-top: 20px;
     .table-title {
       display: table-header-group;
       font-size: 13px;
