--- a/src/page/home/style.pcss
+++ b/src/page/home/style.pcss
@@ -1,6 +1,7 @@
 .app-main {
   background: var(--mainBgColor);
   display: flex;
+  overflow: hidden;
   .container {
     width: 100%;
     max-width: var(--mainMaxWidth);
