--- a/src/component/footer/style.pcss
+++ b/src/component/footer/style.pcss
@@ -1,6 +1,6 @@
 .app-footer {
   position: relative;
-  height: 55px;
+  height: 54px;
   border-top: 1px solid var(--borderColor);
   .footer-bg {
     position: absolute;
@@ -41,7 +41,7 @@
             width: inherit;
             height: 15px;
             background: inherit;
-            transition: all 0.25s linear;
+            transition: all 0.15s ease;
           }
           &::before {
             top: 0px;
