feat: add play list of left-side

--- a/src/component/footer/style.pcss
+++ b/src/component/footer/style.pcss
@@ -21,6 +21,7 @@
       align-items: center;
       justify-content: space-between;
       width: 120px;
+      cursor: pointer;
       .play-btn {
         position: relative;
         width: 32px;
