--- a/src/component/left-side/style.pcss
+++ b/src/component/left-side/style.pcss
@@ -3,13 +3,35 @@
   height: calc(100vh - 100px);
   background: var(--mainFgColor);
   border-right: 1px solid var(--borderColor);
-  .play-list {
-    .list-item {
-      height: 35px;
-      line-height: 35px;
-      padding-left: 10px;
-      &:hover {
-        background: var(--hoverBgColor);
+  .title {
+    font-size: 14px;
+    height: 50px;
+    line-height: 50px;
+    padding-left: 12px;
+  }
+  .track-container {
+    height: calc(100% - 50px);
+    .track-list {
+      cursor: pointer;
+      height: 100%;
+      border-top: 1px inset black;
+      padding: 0 12px;
+      .list-item {
+        height: 30px;
+        line-height: 30px;
+        padding-left: 10px;
+        font-size: var(--fontSmallSize);
+        color: #555;
+        border-bottom: 1px inset black;
+        display: flex;
+        justify-content: space-between;
+        padding: 0 24px;
+        .song-name {
+          overflow: hidden;
+        }
+        &:hover {
+          background: var(--hoverBgColor);
+        }
       }
     }
   }
