chore: adjust data of left-side

--- a/src/style.pcss
+++ b/src/style.pcss
@@ -13,6 +13,7 @@ body {
   --mainBgColor: #fafbfc;
   --mainColor: #00BFFF;
   --grayColor: #666;
+  --lightGrayColor: #ccc;
   --mainFontColor: #24292e;
   --descFontColor: #aaa;
   --mainMaxWidth: 980px;
