--- a/src/component/left-side/style.pcss
+++ b/src/component/left-side/style.pcss
@@ -8,13 +8,14 @@
     height: 50px;
     line-height: 50px;
     padding-left: 12px;
+    box-shadow: 0 2px 3px var(--lightGrayColor);
   }
   .track-container {
     height: calc(100% - 50px);
     .track-list {
+      margin-top: 6px;
       cursor: pointer;
       height: 100%;
-      border-top: 1px inset black;
       padding: 0 12px;
       .list-item {
         height: 30px;
@@ -22,7 +23,7 @@
         padding-left: 10px;
         font-size: var(--fontSmallSize);
         color: #555;
-        border-bottom: 1px inset black;
+        border-bottom: 1px dashed black;
         display: flex;
         justify-content: space-between;
         padding: 0 24px;
