chore: adjust style

--- a/src/component/left-side/style.pcss
+++ b/src/component/left-side/style.pcss
@@ -23,7 +23,7 @@
         padding-left: 10px;
         font-size: var(--fontSmallSize);
         color: #555;
-        border-bottom: 1px dashed black;
+        border-bottom: 1px dashed var(--mainColor);
         display: flex;
         justify-content: space-between;
         padding: 0 24px;
