--- a/src/style.pcss
+++ b/src/style.pcss
@@ -9,9 +9,10 @@ body {
 }
 
 :root {
+  --whiteColor: white;
   --mainFgColor: white;
   --mainBgColor: #fafbfc;
-  --mainColor: #00BFFF;
+  --mainColor: black;
   --grayColor: #666;
   --lightGrayColor: #ccc;
   --mainFontColor: #24292e;
