--- a/src/page/Recommend/components/box-list/style.pcss
+++ b/src/page/Recommend/components/box-list/style.pcss
@@ -10,6 +10,8 @@
       width: inherit;
       height: 150px;
       overflow: hidden;
+      border: 2px double var(--mainColor);
+      border-radius: 5px;
       .img {
         transition: all 0.25s;
         width: 100%;
