--- a/src/page/Recommend/style.pcss
+++ b/src/page/Recommend/style.pcss
@@ -8,11 +8,17 @@
     cursor: pointer;
     border-bottom: 1px solid var(--borderColor);
     .tag {
-      &:hover {
-        color: var(--mainColor);
-      }
-      &.active {
-        color:var(--mainColor);
+      position: relative;
+      height: 40px;;
+      line-height: 40px;
+      &:hover::after, &.active::after {
+        content: " ";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        background: var(--mainColor);
       }
     }
   }
