feat: store current song infomation

--- a/src/component/header/style.pcss
+++ b/src/component/header/style.pcss
@@ -33,7 +33,7 @@
       cursor: pointer;
       .menu-item {
         padding: 0 24px;
-        margin-right: 12px;
+        margin-right: var(--fontMiddleSize);
         text-decoration: none;
         color: var(--mainFontColor);
         &:hover {
