--- a/src/style.pcss
+++ b/src/style.pcss
@@ -25,6 +25,9 @@ body {
   --darkBorderColor: #e0e1e2;
   --hoverBgColor: #f0f1f2;
   --fontSmallSize: 12px;
+  --fontMiddleSize: 14px;
+  --fontLargetSize: 16px;
+  --borderRadiusSize: 6px;
 }
 
 code {
