--- a/src/component/left-side/style.pcss
+++ b/src/component/left-side/style.pcss
@@ -4,35 +4,66 @@
   background: var(--mainFgColor);
   border-right: 1px solid var(--borderColor);
   .title {
-    font-size: 14px;
-    height: 50px;
-    line-height: 50px;
-    padding-left: 12px;
-    box-shadow: 0 2px 3px var(--lightGrayColor);
+    font-size: var(--fontMiddleSize);
+    height: 30px;
+    line-height: 30px;
+    padding-left: 14px;
+    border-bottom: 1px solid var(--borderColor);
   }
   .track-container {
-    height: calc(100% - 50px);
+    height: calc(100% - 110px);
     .track-list {
       margin-top: 6px;
       cursor: pointer;
       height: 100%;
-      padding: 0 12px;
+      padding: 0 24px;
       .list-item {
         height: 30px;
         line-height: 30px;
         padding-left: 10px;
         font-size: var(--fontSmallSize);
         color: #555;
-        border-bottom: 1px dashed var(--mainColor);
         display: flex;
         justify-content: space-between;
         padding: 0 24px;
+        border-radius: var(--borderRadiusSize);
         .song-name {
           overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+          width: 120px;
         }
         &:hover {
           background: var(--hoverBgColor);
         }
+      }
+    }
+  }
+  .cur-music-box {
+    position: relative;
+    margin-top: 10px;
+    height: 70px;
+    padding: 0 12px;
+    border-top: 1px solid var(--borderColor);
+    .music-img {
+      position: absolute;
+      top: 50%;
+      transform: translate(0, -50%);
+      width: 60px;
+      height: 60px;
+    }
+    .music-info {
+      position: absolute;
+      top: 50%;
+      transform: translate(0, -50%);
+      padding-left: 70px;
+      .music-title {
+        height: 20px;
+        font-size: var(--fontMiddleSize);
+      }
+      .music-time {
+        font-size: var(--fontSmallSize);
+        color: var(--grayColor);
       }
     }
   }
