--- a/src/page/Recommend/components/box-list/style.pcss
+++ b/src/page/Recommend/components/box-list/style.pcss
@@ -11,7 +11,7 @@
       height: 150px;
       overflow: hidden;
       border: 2px double var(--mainColor);
-      border-radius: 5px;
+      border-radius: var(--borderRadiusSize);
       .img {
         transition: all 0.25s;
         width: 100%;
