--- a/src/page/playlist-detail/style.pcss
+++ b/src/page/playlist-detail/style.pcss
@@ -1,30 +1,31 @@
 .playlist-detail {
-  padding: 45px 45px 0;
+  padding: 35px 0 0 45px;
   height: 100%;
   overflow: hidden;
   box-sizing: border-box;
   .playlist-top {
     position: relative;
-    padding-bottom: 20px;
     border-bottom: 1px solid var(--borderColor);
     .playlist-cover {
       position: absolute;
       top: 0;
       left: 0;
-      width: 200px;
-      height: 200px;
+      width: 150px;
+      height: 150px;
       margin-right: 45px;
       overflow: hidden;
     }
     .playlist-info {
-      padding-left: 250px;
-      height: 200px;
+      padding-left: 180px;
+      height: 175px;
       .playlist-title {
         text-align: left;
         color: var(--mainFontColor);
+        font-size: var(--fontLargetSize);
       }
       .playlist-desc {
         color: var(--descFontColor);
+        font-size: var(--fontMiddleSize);
       }
     }
   }
@@ -34,14 +35,14 @@
     margin-top: 20px;
     .table-title {
       display: table-header-group;
-      font-size: 13px;
+      font-size: var(--fontMiddleSize);
       .title-item {
         display: table-cell;
         height: 25px;
         line-height: 25px;
         border: 1px solid var(--borderColor);
         border-left-width: 0;
-        padding-left: 12px;
+        padding-left: var(--fontMiddleSize);
       }
     }
     .table-content {
@@ -50,12 +51,12 @@
       color: var(--grayColor);
       .table-row {
         display: table-row;
-        font-size: 12px;
+        font-size: var(--fontMiddleSize);
         height: 30px;
         line-height: 30px;
         .table-cell {
           display: table-cell;
-          padding-left: 12px;
+          padding-left: var(--fontMiddleSize);
         }
         &:nth-child(even) {
           background: #f0f1f2;
