chore: fix style of play button

--- a/src/style.pcss
+++ b/src/style.pcss
@@ -12,7 +12,7 @@ body {
   --whiteColor: white;
   --mainFgColor: white;
   --mainBgColor: #fafbfc;
-  --mainColor: black;
+  --mainColor: #333;
   --grayColor: #666;
   --lightGrayColor: #ccc;
   --mainFontColor: #24292e;
