--- a/src/component/footer/style.pcss
+++ b/src/component/footer/style.pcss
@@ -26,33 +26,33 @@
         position: relative;
         width: 32px;
         height: 32px;
-        border: 2px solid black;
+        border: 1px solid var(--mainColor);
         border-radius: 100%;
         display: flex;
         align-items: center;
+        box-sizing: border-box;
         .play-icon {
           position: relative;
-          width: 2px;
-          height: 20px;
-          background: black;
+          width: 1.5px;
+          height: 17px;
+          background: var(--mainColor);
           margin-left: 12px;
           &::before, &::after {
             content: " ";
             position: absolute;
+            left: 5px;
             width: inherit;
-            height: 15px;
+            height: 11px;
             background: inherit;
             transition: all 0.15s ease;
           }
           &::before {
             top: 0px;
-            left: 6px;
             transform: rotate(-45deg);
           }
           &::after {
-            top: 4px;
-            left: 6px;
-            transform: rotate(50deg);
+            top: 6px;
+            transform: rotate(45deg);
           }
         }
         .play-icon.active {
