--- a/src/page/playlist-detail/style.pcss
+++ b/src/page/playlist-detail/style.pcss
@@ -17,7 +17,7 @@
     }
     .playlist-info {
       padding-left: 180px;
-      height: 175px;
+      min-height: 175px;
       .playlist-title {
         text-align: left;
         color: var(--mainFontColor);
