fix: filter song that none source

--- a/src/page/Recommend/style.pcss
+++ b/src/page/Recommend/style.pcss
@@ -11,6 +11,9 @@
       position: relative;
       height: 40px;;
       line-height: 40px;
+      &:hover, &.active {
+        color: var(--mainColor);
+      }
       &:hover::after, &.active::after {
         content: " ";
         position: absolute;
