--- a/src/page/playlist-detail/style.pcss
+++ b/src/page/playlist-detail/style.pcss
@@ -62,7 +62,7 @@
           background: #f0f1f2;
         }
         &:hover {
-          background: #e0e1e2;
+          background: var(--darkHoverBgColor);
         }
       }
     }
