--- a/src/style.pcss
+++ b/src/style.pcss
@@ -12,7 +12,7 @@ body {
   --whiteColor: white;
   --mainFgColor: white;
   --mainBgColor: #fafbfc;
-  --mainColor: #333;
+  --mainColor: #00BFFF;
   --grayColor: #666;
   --lightGrayColor: #ccc;
   --mainFontColor: #24292e;
@@ -24,6 +24,7 @@ body {
   --borderColor: #f0f1f2;
   --darkBorderColor: #e0e1e2;
   --hoverBgColor: #f0f1f2;
+  --darkHoverBgColor: #e0e1e2;
   --fontSmallSize: 12px;
   --fontMiddleSize: 14px;
   --fontLargetSize: 16px;
