--- a/src/component/footer/style.pcss
+++ b/src/component/footer/style.pcss
@@ -2,6 +2,7 @@
   position: relative;
   height: 54px;
   border-top: 1px solid var(--borderColor);
+  background: var(--mainColor);
   .footer-bg {
     position: absolute;
     z-index: -1;
@@ -26,7 +27,7 @@
         position: relative;
         width: 32px;
         height: 32px;
-        border: 1px solid var(--mainColor);
+        border: 1px solid white;
         border-radius: 100%;
         display: flex;
         align-items: center;
@@ -35,7 +36,7 @@
           position: relative;
           width: 1.5px;
           height: 17px;
-          background: var(--mainColor);
+          background: white;
           margin-left: 12px;
           &::before, &::after {
             content: " ";
