--- a/src/component/footer/style.pcss
+++ b/src/component/footer/style.pcss
@@ -21,7 +21,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      width: 120px;
+      flex: 0 0 120px;
       cursor: pointer;
       .play-btn {
         position: relative;
@@ -62,6 +62,10 @@
           }
         }
       }
+    }
+    .slide-bar {
+      margin-left: 100px;
+      width: 500px;
     }
   }
 }
