chore: adjust text-overflow

--- a/src/component/left-side/style.pcss
+++ b/src/component/left-side/style.pcss
@@ -28,9 +28,6 @@
         padding: 0 24px;
         border-radius: var(--borderRadiusSize);
         .song-name {
-          overflow: hidden;
-          text-overflow: ellipsis;
-          white-space: nowrap;
           width: 120px;
         }
         &:hover {
@@ -60,6 +57,7 @@
       transform: translate(0, -50%);
       padding-left: 70px;
       .music-title {
+        width: 150px;
         height: 20px;
         font-size: var(--fontMiddleSize);
       }
