feat: add slide bar for select play time

--- a/src/component/footer/style.pcss
+++ b/src/component/footer/style.pcss
@@ -71,6 +71,7 @@
       width: 500px;
       .ant-slider {
         flex: 0 0 400px;
+        margin: 0 auto;
       }
       .ant-slider-track {
         background: white;
@@ -79,6 +80,7 @@
         background: #c3c3c3;
       }
       .slide-time {
+        white-space: nowrap;
         font-size: var(--fontSmallSize);
         color: white;
       }
