--- a/src/page/playlist-detail/style.pcss
+++ b/src/page/playlist-detail/style.pcss
@@ -58,11 +58,9 @@
           display: table-cell;
           padding-left: var(--fontMiddleSize);
         }
-        &:nth-child(even) {
-          background: #f0f1f2;
-        }
         &:hover {
-          background: var(--darkHoverBgColor);
+          background: #EFFFFF;
+          color: var(--mainColor);
         }
       }
     }
