--- a/src/component/left-side/style.pcss
+++ b/src/component/left-side/style.pcss
@@ -9,6 +9,7 @@
     line-height: 30px;
     padding-left: 14px;
     border-bottom: 1px solid var(--borderColor);
+    font-weight: bold;
   }
   .track-container {
     height: calc(100% - 110px);
