fix: fix bug that slide for control time

--- a/src/component/footer/style.pcss
+++ b/src/component/footer/style.pcss
@@ -63,6 +63,17 @@
         }
       }
     }
+    .ant-slider-track {
+      background: white;
+    }
+    .ant-slider-rail {
+      background: #cfcfcf;
+    }
+    .slide-time {
+      white-space: nowrap;
+      font-size: var(--fontSmallSize);
+      color: white;
+    }
     .time-bar {
       display: flex;
       align-items: center;
@@ -72,17 +83,6 @@
       .ant-slider {
         flex: 0 0 400px;
         margin: 0 auto;
-      }
-      .ant-slider-track {
-        background: white;
-      }
-      .ant-slider-rail {
-        background: #c3c3c3;
-      }
-      .slide-time {
-        white-space: nowrap;
-        font-size: var(--fontSmallSize);
-        color: white;
       }
     }
     .volume-bar {
@@ -94,17 +94,6 @@
       .ant-slider {
         flex: 0 0 130px;
         margin: 0 auto;
-      }
-      .ant-slider-track {
-        background: white;
-      }
-      .ant-slider-rail {
-        background: #c3c3c3;
-      }
-      .slide-time {
-        white-space: nowrap;
-        font-size: var(--fontSmallSize);
-        color: white;
       }
     }
   }
