feat: add rank list page

--- a/src/component/box-list/style.pcss
+++ b/src/component/box-list/style.pcss
@@ -1,4 +1,4 @@
-.recommend-box {
+.box-list {
   display: flex;
   flex-wrap: wrap;
   height: 100%;
@@ -21,9 +21,12 @@
       }
     }
     .box-title {
+      padding-top: 10px;
       width: inherit;
       margin: 0 auto;
       font-size: var(--fontSmallSize);
+      text-align: center;
+      height: 30px;
     }
   }
 }
