--- a/src/component/footer/style.pcss
+++ b/src/component/footer/style.pcss
@@ -67,7 +67,7 @@
       background: white;
     }
     .ant-slider-rail {
-      background: #cfcfcf;
+      background: #E6E6E6;
     }
     .slide-time {
       white-space: nowrap;
