--- a/src/component/footer/style.pcss
+++ b/src/component/footer/style.pcss
@@ -83,6 +83,7 @@
       .ant-slider {
         flex: 0 0 400px;
         margin: 0 auto;
+        margin: 0 10px;
       }
     }
     .volume-bar {
