--- a/src/component/left-side/style.pcss
+++ b/src/component/left-side/style.pcss
@@ -45,18 +45,26 @@
     border-top: 1px solid var(--borderColor);
     opacity: 0;
     transition: opacity 0.25s ease;
-    .music-img {
+    cursor: pointer;
+    .svg-icon, .music-img {
       position: absolute;
       top: 50%;
       transform: translate(0, -50%);
-      width: 60px;
-      height: 60px;
+      width: 50px;
+      height: 50px;
+    }
+    .svg-icon {
+      opacity: 0;
+      z-index: 1;
+      &:hover {
+        opacity: 1;
+      }
     }
     .music-info {
       position: absolute;
       top: 50%;
       transform: translate(0, -50%);
-      padding-left: 70px;
+      padding-left: 65px;
       .music-title {
         width: 150px;
         height: 20px;
