feat: add background image of song page

--- a/src/style.pcss
+++ b/src/style.pcss
@@ -13,13 +13,13 @@ body {
   --mainFgColor: white;
   --mainBgColor: #fafbfc;
   --mainColor: #00BFFF;
-  --grayColor: #666;
+  --grayColor: #6f6f6f;
   --lightGrayColor: #ccc;
   --mainFontColor: #24292e;
   --descFontColor: #aaa;
   --borderColor: #f0f1f2;
   --darkBorderColor: #e0e1e2;
-  --hoverBgColor: #f0f1f2;
+  --hoverBgColor: #aaa;
   --darkHoverBgColor: #e0e1e2;
   --fontSmallSize: 12px;
   --mainMaxWidth: 980px;
@@ -48,7 +48,7 @@ table {
 }
 
 a {
-  color: black;
+  color: inherit;
   text-decoration: none;
 }
 
