--- a/src/component/header/style.pcss
+++ b/src/component/header/style.pcss
@@ -1,6 +1,8 @@
 .app-header {
   position: relative;
   height: 45px;
+  color: var(--mainFontColor);
+  background: var(--mainFgColor);
   .header-bg {
     position: absolute;
     z-index: -1;
@@ -8,7 +10,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: var(--mainFgColor);
+    color: inherit;
+    background: inherit;
   }
   .header-container {
     display: flex;
@@ -19,12 +22,14 @@
     height: 45px;
     line-height: 45px;
     margin: 0 auto;
-    color: var(--mainFontColor);
     border-bottom: 1px solid var(--borderColor);
+    color: inherit;
+    background: inherit;
     .app-title {
-      color: var(--mainFontColor);
       cursor: pointer;
       font-size: 18px;
+      color: inherit;
+      background: inherit;
     }
     .menu-list {
       display: flex;
@@ -35,7 +40,6 @@
         padding: 0 24px;
         margin-right: var(--fontMiddleSize);
         text-decoration: none;
-        color: var(--mainFontColor);
         &:hover {
           color: var(--mainColor);
         }
