--- a/src/component/left-side/style.pcss
+++ b/src/component/left-side/style.pcss
@@ -10,14 +10,17 @@
     padding-left: 14px;
     border-bottom: 1px solid var(--borderColor);
     font-weight: bold;
+    color: inherit;
   }
   .track-container {
     height: calc(100% - 110px);
+    color: inherit;
     .track-list {
       margin-top: 6px;
       cursor: pointer;
       height: 100%;
       padding: 0 24px;
+      color: inherit;
       .list-item {
         height: 30px;
         line-height: 30px;
@@ -28,11 +31,12 @@
         justify-content: space-between;
         padding: 0 24px;
         border-radius: var(--borderRadiusSize);
+        color: inherit;
         .song-name {
           width: 120px;
         }
         &:hover {
-          background: var(--hoverBgColor);
+          color: var(--mainColor);
         }
       }
     }
@@ -46,6 +50,7 @@
     opacity: 0;
     transition: opacity 0.25s ease;
     cursor: pointer;
+    color: inherit;
     .svg-icon, .music-img {
       position: absolute;
       top: 50%;
@@ -65,10 +70,12 @@
       top: 50%;
       transform: translate(0, -50%);
       padding-left: 65px;
+      color: inherit;
       .music-title {
         width: 150px;
         height: 20px;
         font-size: var(--fontMiddleSize);
+        color: inherit;
       }
       .music-time {
         font-size: var(--fontSmallSize);
