--- a/src/page/home/style.pcss
+++ b/src/page/home/style.pcss
@@ -1,12 +1,28 @@
-.app-main {
-  background: var(--mainBgColor);
-  display: flex;
-  overflow: hidden;
-  .container {
-    width: 100%;
-    max-width: var(--mainMaxWidth);
-    min-width: var(--mainMinWidth);
-    height: calc(100vh - 100px);
-    margin: 0 auto;
+.home-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+.home {
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  .app-main {
+    background: var(--mainBgColor);
+    display: flex;
+    overflow: hidden;
+    .container {
+      width: 100%;
+      max-width: var(--mainMaxWidth);
+      min-width: var(--mainMinWidth);
+      height: calc(100vh - 100px);
+      margin: 0 auto;
+    }
   }
 }
