feat: add animation that move upward of lyric

--- a/src/page/detail/style.pcss
+++ b/src/page/detail/style.pcss
@@ -21,7 +21,7 @@
       .playlist-title {
         text-align: left;
         color: var(--mainFontColor);
-        font-size: var(--fontLargetSize);
+        font-size: var(--fontBigSize);
       }
       .playlist-desc {
         color: var(--descFontColor);
