--- a/src/style.pcss
+++ b/src/style.pcss
@@ -27,7 +27,8 @@ body {
   --headerMaxWidth: 1200px;
   --headerMinWidth: 850px;
   --fontMiddleSize: 14px;
-  --fontLargetSize: 16px;
+  --fontBigSize: 16px;
+  --fontHugeSize: 20px;
   --borderRadiusSize: 6px;
 }
 
