--- a/src/page/home/style.pcss
+++ b/src/page/home/style.pcss
@@ -8,6 +8,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
+  transition: all 0.25s ease;
 }
 .home {
   background-size: contain;
