--- a/src/page/song/style.pcss
+++ b/src/page/song/style.pcss
@@ -1,8 +1,22 @@
-.lyric-list {
-  .lyric-line {
-    text-align: center;
-  }
-  .active {
-    color: var(--mainColor);
+.song {
+  position: relative;
+  .lyric-list {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    .lyric-line {
+      text-align: center;
+      height: 30px;
+      line-height: 30px;
+      font-size: var(--fontBigSize);
+      transition: all 0.35s ease;
+    }
+    .active {
+      color: var(--mainColor);
+      font-size: var(--fontHugeSize);
+      font-weight: bold;
+    }
   }
 }
