--- a/src/page/home/component/left-side/style.pcss
+++ b/src/page/home/component/left-side/style.pcss
@@ -29,6 +29,7 @@
         color: #555;
         display: flex;
         justify-content: space-between;
+        align-items: center;
         padding: 0 24px;
         border-radius: var(--borderRadiusSize);
         color: inherit;
