perf: add skeleton screen

--- a/src/component/box-list/style.pcss
+++ b/src/component/box-list/style.pcss
@@ -5,6 +5,7 @@
   .box-item {
     width: 150px;
     margin: 20px;
+    transition: all 0.25s ease;
     .img-box {
       cursor: pointer;
       width: inherit;
