--- a/src/style.pcss
+++ b/src/style.pcss
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: PingFangSC-Regular,poppin,Tahoma,Arial,sans-serif;
+  user-select: none;
 }
 
 :root {
