fix: fix build error

--- a/src/page/song/style.pcss
+++ b/src/page/song/style.pcss
@@ -17,6 +17,7 @@
       color: var(--mainColor);
       font-size: var(--fontHugeSize);
       font-weight: bold;
+      will-change: contents;
     }
   }
 }
